--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <img src="zak.png" alt="Zakhele Sithole">
     <h1>Zakhele Sithole</h1>
     <p>Final-year BSc Information Technology | AI & Software Development Enthusiast</p>
-    <p>075 296 5327 | <a href="mailto:zakhelesthole0@gmail.com" style="color:white;">zakhelesthole0@gmail.com</a> | 
+    <p>063 606 7554/075 296 5327 | <a href="mailto:zakhelesthole0@gmail.com" style="color:white;">zakhelesthole0@gmail.com</a> | 
       <a href="https://github.com/zakhelesithole" target="_blank" style="color:white;">GitHub</a> |
       <a href="https://linkedin.com/in/zakhele-sthole-087820376" target="_blank" style="color:white;">LinkedIn</a>
     </p>
@@ -99,7 +99,7 @@
   <div class="container">
     <div id="summary" class="section">
       <h2>Professional Summary</h2>
-      <p>Final-year BSc in Information Technology student at North-West University. Strong foundation in Artificial Intelligence, Mathematics, and Software Development. Passionate about solving real-world problems using scalable, AI-driven solutions. Eager to contribute to dynamic teams in software engineering, data analysis, or AI development.</p>
+      <p>BSc in Information Technology student at North-West University. Strong foundation in Artificial Intelligence, Mathematics, and Software Development. Passionate about solving real-world problems using scalable, AI-driven solutions. Eager to contribute to dynamic teams in software engineering, data analysis, or AI development.</p>
     </div>
 
     <div id="experience" class="section">
@@ -111,7 +111,7 @@
 
     <div id="education" class="section">
       <h2>Education</h2>
-      <p><strong>North-West University</strong> — BSc Information Technology (Final Year, Expected 2025)</p>
+      <p><strong>North-West University</strong> — BSc Information Technology (Completed: 28 November 2025)</p>
       <p>Modules: Data Structures & Algorithms, Database Systems, Machine Learning, Web Development, Software Engineering, Mathematics, Basic Accounting</p>
       
     </div>
@@ -122,6 +122,7 @@
         <li><strong>AI Chatbot for Student Support</strong> – Built a chatbot to assist students with frequently asked questions.</li>
         <li><strong>Student Book Shop System</strong> – Developed a full-stack platform for book sales with real-time inventory.</li>
         <li><strong>Independent Artists Financial Solutions</strong> – Desktop app for artists to manage finances and generate reports.</li>
+        <li><strong>Campus Market Platform</strong> – online campus marketplace where students can buy, sell, or trade items and services</li>
       </ul>
     </div>
 
@@ -140,4 +141,5 @@
   </script>
 </body>
 </html>
+
 
