--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <header>
     <img src="zak.png" alt="Zakhele Sithole">
     <h1>Zakhele Sithole</h1>
-    <p>BSc Information Technology | AI & Software Development Enthusiast</p>
+    <p>BSc Information Technology | AI, Operating Systems & Software Development Enthusiast</p>
     <p>063 606 7554/075 296 5327 | <a href="mailto:zakhelesthole0@gmail.com" style="color:white;">zakhelesthole0@gmail.com</a> | 
       <a href="https://github.com/zakhelesithole" target="_blank" style="color:white;">GitHub</a> |
       <a href="https://linkedin.com/in/zakhele-sthole-087820376" target="_blank" style="color:white;">LinkedIn</a>
@@ -141,6 +141,7 @@
   </script>
 </body>
 </html>
+
 
 
 
