--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      background: #ffe6f0; /* light pink */
+      background: #ffe6f0;
       color: #333;
       transition: background 0.3s, color 0.3s;
     }
@@ -81,10 +81,9 @@
   <header>
     <img src="zak.png" alt="Zakhele Sithole">
     <h1>Zakhele Sithole</h1>
-    <p>BSc Information Technology | AI, Operating Systems & Software Development Enthusiast</p>
-    <p>063 606 7554/075 296 5327 | <a href="mailto:zakhelesthole0@gmail.com" style="color:white;">zakhelesthole0@gmail.com</a> | 
-      <a href="https://github.com/zakhelesithole" target="_blank" style="color:white;">GitHub</a> |
-      <a href="https://linkedin.com/in/zakhele-sthole-087820376" target="_blank" style="color:white;">LinkedIn</a>
+    <p>BSc Information Technology Graduate | AI, Operating Systems & Software Development Enthusiast</p>
+    <p>063 606 7554 / 075 296 5327 | <a href="mailto:zakhelesthole0@gmail.com" style="color:white;">zakhelesthole0@gmail.com</a> | 
+      <a href="https://github.com/zakhelesithole" target="_blank" style="color:white;">GitHub</a>
     </p>
   </header>
 
@@ -99,7 +98,7 @@
   <div class="container">
     <div id="summary" class="section">
       <h2>Professional Summary</h2>
-      <p>BSc in Information Technology student at North-West University. Strong foundation in Artificial Intelligence, Mathematics, and Software Development. Passionate about solving real-world problems using scalable, AI-driven solutions. Eager to contribute to dynamic teams in software engineering, data analysis, or AI development.</p>
+      <p>BSc in Information Technology graduate from North-West University. Strong foundation in Artificial Intelligence, Operating Systems, and Software Development. Passionate about solving real-world problems using scalable, AI-driven solutions. Ready to contribute to dynamic teams in software engineering, data analysis, or AI development.</p>
     </div>
 
     <div id="experience" class="section">
@@ -112,8 +111,7 @@
     <div id="education" class="section">
       <h2>Education</h2>
       <p><strong>North-West University</strong> — BSc Information Technology (Completed: 28 November 2025)</p>
-      <p>Modules: Data Structures & Algorithms, Database Systems, Machine Learning, Web Development, Software Engineering, Mathematics, Basic Accounting</p>
-      
+      <p>Modules: Data Structures & Algorithms, Database Systems, Machine Learning, Web Development, Software Engineering, Mathematics, Operating Systems, Decision Support Systems, Basic Accounting</p>
     </div>
 
     <div id="projects" class="section">
@@ -122,7 +120,7 @@
         <li><strong>AI Chatbot for Student Support</strong> – Built a chatbot to assist students with frequently asked questions.</li>
         <li><strong>Student Book Shop System</strong> – Developed a full-stack platform for book sales with real-time inventory.</li>
         <li><strong>Independent Artists Financial Solutions</strong> – Desktop app for artists to manage finances and generate reports.</li>
-        <li><strong>Campus Market Platform</strong> – online campus marketplace where students can buy, sell, or trade items and services</li>
+        <li><strong>Campus Market Platform</strong> – Online marketplace for students to buy, sell, or trade items and services.</li>
       </ul>
     </div>
 
@@ -131,6 +129,7 @@
       <p><strong>Languages:</strong> C#, C++, Java, JavaScript, Python</p>
       <p><strong>Tools & Tech:</strong> GitHub, MongoDB, Oracle, SQL, Visual Studio, VS Code</p>
       <p><strong>Soft Skills:</strong> Critical Thinking, Team Collaboration, Technical Documentation, Time Management</p>
+      <p><strong>Design:</strong> Canva</p>
     </div>
   </div>
 
@@ -141,6 +140,7 @@
   </script>
 </body>
 </html>
+
 
 
 
