--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <div id="experience" class="section">
       <h2>Work Experience</h2>
-      <p><strong>Batshazwayo Secondary School (06/2021 - 02/2022)</strong><br />
+      <p><strong>Department of education(high School) (06/2021 - 02/2022)</strong><br />
       Clerk (SA-SAMS System)<br />
       - Managed student records, marks, and transfers using SA-SAMS.</p>
     </div>
@@ -140,6 +140,7 @@
   </script>
 </body>
 </html>
+
 
 
 
